test/functions/deitz/test_nonvar1_error.good
test_nonvar1_error.chpl:5: error: illegal lvalue in assignment
