test/functions/deitz/test_nonvar1_error.chpl
var x: int;

proc foo() return x;

foo() = 2;

writeln(x);
